Fixed bad coloring of table text in dark mode

--- a/client/src/gui/scenes/styles/Generic Style.css
+++ b/client/src/gui/scenes/styles/Generic Style.css
@@ -158,6 +158,8 @@
     -fx-background-color: rgba(255, 255, 255, 0.05);
     -fx-border-color: rgba(0, 0, 0, 0.1);
     -fx-border-width: 1px;
+    -fx-font-weight: bold;
+    -fx-effect: dropshadow(gaussian, rgba(255, 255, 255, 0.6), 3, 0.3, 0, 0);
 }
 
 .table-row-cell:odd {
